@@ -6,16 +6,16 @@
   ~ The ASF licenses this file to You under the Apache License, Version 2.0
   ~ (the "License"); you may not use this file except in compliance with
   ~ the License.  You may obtain a copy of the License at
-  ~ 
+  ~
   ~   http://www.apache.org/licenses/LICENSE-2.0
-  ~ 
+  ~
   ~ Unless required by applicable law or agreed to in writing, software
   ~ distributed under the License is distributed on an "AS IS" BASIS,
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-  
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -137,7 +137,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <log4j2.version>2.17.1</log4j2.version>
         <spotless.version>2.4.2</spotless.version>
-        <junit5.version>5.6.1</junit5.version>
+        <junit5.version>5.7.2</junit5.version>
         <mockito.version>3.9.0</mockito.version>
         <assertj.version>3.17.2</assertj.version>
         <h2.version>1.4.200</h2.version>
@@ -270,6 +270,11 @@
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.junit.vintage</groupId>
+           <artifactId>junit-vintage-engine</artifactId>
            <scope>test</scope>
        </dependency>
 
@@ -644,10 +649,9 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M4</version>
                     <configuration>
                         <forkCount>3</forkCount>
-                        <reuseForks>true</reuseForks>
-                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     </configuration>
                 </plugin>
 
